# zero2prod

./: Cargo.toml  configuration.yaml
migrations/: 20210418223555_create_subcriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  tests.rs
